--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,22 +4,38 @@ android {
     compileSdkVersion 17
     buildToolsVersion "26.0.1"
     aaptOptions {
-                cruncherEnabled = false
-                 useNewCruncher = false
-             }
+        cruncherEnabled = false
+        useNewCruncher = false
+    }
     defaultConfig {
         applicationId "com.zhang.box"
         minSdkVersion 11
         targetSdkVersion 17
+        signingConfig signingConfigs.debug
     }
-
+    signingConfigs {
+        debug {
+            storeFile file('C:/Users/Administrator/.android/debug.keystore')
+            keyAlias 'androiddebugkey'
+            keyPassword 'android'
+            storePassword 'android'
+        }
+        release {
+            keyAlias 'androiddebugkey'
+            keyPassword 'android'
+            storeFile file('C:/Users/Administrator/.android/debug.keystore')
+            storePassword 'android'
+        }
+    }
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
         }
+        debug {
+            signingConfig signingConfigs.release
+        }
     }
-
     splits {
         abi {
             enable true
@@ -33,8 +49,9 @@ android {
             jniLibs.srcDirs = ['src/main/jniLibs']
         }
     }
-
 //    android{compileOptions.encoding="GBK"}
+    productFlavors {
+    }
 }
 
 dependencies {
