--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,22 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.zhang.box"
-    android:versionCode="14"
-    android:versionName="1.0" >
+    android:versionCode="15"
+    android:versionName="1.0">
 
     <uses-sdk
         android:minSdkVersion="11"
         android:targetSdkVersion="17" />
 
+
     <application
         android:name="com.zhang.box.MyApplication"
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name" >
+        android:label="@string/app_name">
         <activity
             android:name="com.zhang.box.LoadingActivity"
-            android:label="@string/app_name" >
-            <intent-filter android:priority="2" >
+            android:label="@string/app_name">
+            <intent-filter android:priority="2">
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -42,96 +43,72 @@
             android:name="com.zhang.box.services.LoadingService"
             android:enabled="true" />
 
-        <receiver android:name="com.zhang.box.services.MachineBrocastReceiver" >
-        </receiver>
-        <receiver android:name="com.zhang.box.services.GoodsOutBrocastReceiver" >
-        </receiver>
-        <receiver android:name=".services.AutoStartAppReceiver"
-            android:enabled="true"
-            android:exported="true">
-            <intent-filter android:priority="1000">
-                <action android:name="android.intent.action.BOOT_COMPLETED"></action>
-            </intent-filter>
+        <receiver android:name="com.zhang.box.services.MachineBrocastReceiver"></receiver>
+        <receiver android:name="com.zhang.box.services.GoodsOutBrocastReceiver"></receiver>
 
-        </receiver>
         <activity
             android:name="com.zhang.box.GallaryActivity"
             android:label="@string/app_name"
             android:launchMode="singleTask"
-            android:screenOrientation="landscape" >
-        </activity>
+            android:screenOrientation="landscape"></activity>
         <activity
             android:name="com.zhang.box.CeShiActivity"
             android:label="@string/app_name"
-            android:screenOrientation="landscape" >
-        </activity>
+            android:screenOrientation="landscape"></activity>
         <activity
             android:name="com.zhang.box.ConfigActivity"
             android:label="@string/app_name"
-            android:screenOrientation="landscape" >
-        </activity>
+            android:screenOrientation="landscape"></activity>
         <activity
             android:name="com.zhang.box.ProActivity"
             android:label="@string/app_name"
-            android:screenOrientation="landscape" >
-        </activity>
+            android:screenOrientation="landscape"></activity>
         <activity
             android:name="com.zhang.box.DegreeActivity"
             android:label="@string/app_name"
-            android:screenOrientation="landscape" >
-        </activity>
+            android:screenOrientation="landscape"></activity>
         <activity
             android:name="com.zhang.box.HuodaoActivity"
             android:label="@string/app_name"
-            android:screenOrientation="landscape" >
-        </activity>
+            android:screenOrientation="landscape"></activity>
         <activity
             android:name="com.zhang.box.WebViewCeshiActivity"
             android:label="@string/app_name"
-            android:screenOrientation="landscape" >
-        </activity>
+            android:screenOrientation="landscape"></activity>
         <activity
             android:name="com.zhang.box.ReadSystemMemory"
             android:label="@string/app_name"
-            android:screenOrientation="landscape" >
-        </activity>
+            android:screenOrientation="landscape"></activity>
         <activity
             android:name="com.zhang.box.BuyActivity"
             android:label="@string/app_name"
-            android:screenOrientation="landscape" >
-        </activity>
+            android:screenOrientation="landscape"></activity>
         <activity
             android:name="com.zhang.box.AppActivity"
             android:label="@string/app_name"
-            android:screenOrientation="landscape" >
-        </activity>
+            android:screenOrientation="landscape"></activity>
         <activity
             android:name="com.zhang.box.DesAppActivity"
             android:label="@string/app_name"
-            android:screenOrientation="landscape" >
-        </activity>
+            android:screenOrientation="landscape"></activity>
         <activity
             android:name="com.zhang.box.DesProAppActivity"
             android:label="@string/app_name"
-            android:screenOrientation="landscape" >
-        </activity>
+            android:screenOrientation="landscape"></activity>
         <activity
             android:name="com.zhang.box.HelpActivity"
             android:label="@string/app_name"
-            android:screenOrientation="landscape" >
-        </activity>
+            android:screenOrientation="landscape"></activity>
         <activity
             android:name="com.zhang.box.DesProActivity"
             android:label="@string/app_name"
             android:screenOrientation="landscape"
-            android:theme="@style/translucent" >
-        </activity>
+            android:theme="@style/translucent"></activity>
         <activity
             android:name="com.zhang.box.ProSucessActivity"
             android:label="@string/app_name"
             android:screenOrientation="landscape"
-            android:theme="@style/translucent" >
-        </activity>
+            android:theme="@style/translucent"></activity>
 
         <service
             android:name="com.zhang.box.services.MusicService"
@@ -166,7 +143,9 @@
 
     <uses-feature android:name="android.hardware.camera" />
     <uses-feature android:name="android.hardware.camera.autofocus" />
-    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
+
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
     <uses-permission android:name="android.permission.MOUNT_FORMAT_FILESYSTEMS" />
+
 
 </manifest>
